Remove duplicate History

--- a/storefront/layout.html
+++ b/storefront/layout.html
@@ -40,7 +40,7 @@
   {% script '//npmcdn.com/immutable@3.7.5/dist/immutable.min.js' %}
   {% script '//npmcdn.com/intl@1.0.0/dist/Intl.min.js' %}
   {% script '//npmcdn.com/axios@0.7.0/dist/axios.min.js' %}
-  {% script '//npmcdn.com/history@1.12.5/umd/History.min.js' %}
+  {% script '//npmcdn.com/history@1.15.x/umd/History.min.js' %}
 
   {% capture intlLocaleUrl %}//npmcdn.com/intl@1.0.0/locale-data/jsonp/{{ culture.language }}.js{% endcapture %}
   {% script intlLocaleUrl %}
