--- a/storefront/layout.html
+++ b/storefront/layout.html
@@ -32,26 +32,27 @@
 
   {% if user.roles.developer %}
   {% script 'storefront-sdk-libs-dev.js@vtex.storefront-sdk' %}
+  {% script '//npmcdn.com/alt@0.17.4/dist/alt.js' %}
+  {% script '//npmcdn.com/immutable@3.7.5/dist/immutable.js' %}
+  {% script '//npmcdn.com/intl@1.0.0/dist/Intl.js' %}
+  {% script '//npmcdn.com/axios@0.7.0/dist/axios.js' %}
+  {% script '//npmcdn.com/history@1.15.x/umd/History.js' %}
+  {% script 'storefront-sdk-dev.js@vtex.storefront-sdk' %}
   {% else %}
   {% script 'storefront-sdk-libs.js@vtex.storefront-sdk' %}
-  {% endif %}
-
   {% script '//npmcdn.com/alt@0.17.4/dist/alt.min.js' %}
   {% script '//npmcdn.com/immutable@3.7.5/dist/immutable.min.js' %}
   {% script '//npmcdn.com/intl@1.0.0/dist/Intl.min.js' %}
   {% script '//npmcdn.com/axios@0.7.0/dist/axios.min.js' %}
   {% script '//npmcdn.com/history@1.15.x/umd/History.min.js' %}
+  {% script 'storefront-sdk.js@vtex.storefront-sdk' %}
+  {% endif %}
+
 
   {% capture intlLocaleUrl %}//npmcdn.com/intl@1.0.0/locale-data/jsonp/{{ culture.language }}.js{% endcapture %}
   {% script intlLocaleUrl %}
   {% capture reactLocaleUrl %}//npmcdn.com/react-intl@2.0.0-beta-1/dist/locale-data/{{ culture.language }}.js{% endcapture %}
   {% script reactLocaleUrl %}
-
-  {% if user.roles.developer %}
-  {% script 'storefront-sdk-dev.js@vtex.storefront-sdk' %}
-  {% else %}
-  {% script 'storefront-sdk.js@vtex.storefront-sdk' %}
-  {% endif %}
 
   <script>
     window._storefront = {
