--- a/storefront/layout.html
+++ b/storefront/layout.html
@@ -23,8 +23,10 @@
   <![endif]-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
   <link href='http://fonts.googleapis.com/css?family=Lato:200,400,400italic,700,700italic,900' rel='stylesheet' type='text/css'>
+
+  <script src="https://use.typekit.net/gux0uym.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 <body>
 
